infrastructure/03-traefik/foreign/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: traefik
spec:
  type: ExternalName
  externalName: 192.168.178.4
  ports:
    - port: 8200
      targetPort: 8200
      protocol: TCP
      name: http
