infrastructure/03-traefik/foreign/immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: traefik
spec:
  entryPoints:
    - web-local
    - websecure-local
    - websecure-front
  routes:
  - match: Host(`photos.steffenillium.de`) || Host(`immich.steffenillium.de`)
    kind: Rule
    services:
    - name: immich
      port: http
